# flask-variable-manager

./: CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: doc.yml  python-package.yml
docs/: conf.py  flask_variable_manager.rst  index.rst
flask_variable_manager/: __init__.py
flask_variable_manager/extension/: variable_manager.py
flask_variable_manager/tests/: test_vm.py
