[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

# https://github.com/qiskit-community/ecosystem/issues/462
[tool.setuptools]
py-modules = []
include-package-data = false

[tool.setuptools.packages.find]
include = ['flask_variable_manager*']

[project]
name = "flask-variable-manager"
version = "0.2.0"
description = "Create a variable manager in flask, enter values in python, and use values on the jinja template."
authors = [
    { name = "minwook-shin", email = "minwook0106@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask"
]
dependencies = [
    "flask==2.3.3",
    "Jinja2==3.1.3"
]

[project.optional-dependencies]
dev = [
    "flasgger==0.9.7b2",
    "build==1.2.1",
    "twine==5.0.0"
]

[project.urls]
"Homepage" = "https://github.com/minwook-shin/flask-variable-manager"
"Bug Tracker" = "https://github.com/minwook-shin/flask-variable-manager/issues"